--- a/carsteuerung/StatusDisplayWidget.ui
+++ b/carsteuerung/StatusDisplayWidget.ui
@@ -16,6 +16,13 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QGridLayout" name="gridLayout">
+     <item row="4" column="1">
+      <widget class="QLabel" name="freeReceiveBuffer">
+       <property name="text">
+        <string>n/a</string>
+       </property>
+      </widget>
+     </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
@@ -51,8 +58,8 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="QLabel" name="usedPages">
+     <item row="3" column="1">
+      <widget class="QLabel" name="pageSize">
        <property name="text">
         <string>n/a</string>
        </property>
@@ -65,8 +72,29 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
-      <widget class="QLabel" name="pageSize">
+     <item row="1" column="1">
+      <widget class="QLabel" name="usedPages">
+       <property name="text">
+        <string>n/a</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_10">
+       <property name="text">
+        <string>free receive buffer:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>used receive buffer:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QLabel" name="usedReceiveBuffer">
        <property name="text">
         <string>n/a</string>
        </property>
@@ -83,13 +111,6 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_7">
-       <property name="text">
-        <string>memory usage:</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="1">
       <widget class="QProgressBar" name="barTaskQueueLoad">
        <property name="value">
@@ -97,8 +118,29 @@
        </property>
       </widget>
      </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_7">
+       <property name="text">
+        <string>memory usage:</string>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="1">
       <widget class="QProgressBar" name="barUsedPagesProgressBar">
+       <property name="value">
+        <number>24</number>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_8">
+       <property name="text">
+        <string>receive buffer usage:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QProgressBar" name="barReceiveBufferUsage">
        <property name="value">
         <number>24</number>
        </property>
