--- a/carsteuerung/ResourceStatusDisplayWidget.ui
+++ b/carsteuerung/ResourceStatusDisplayWidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>StatusDisplayWidget</class>
- <widget class="QWidget" name="StatusDisplayWidget">
+ <class>ResourceStatusDisplayWidget</class>
+ <widget class="QWidget" name="ResourceStatusDisplayWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QGridLayout" name="gridLayout">
+    <layout class="QGridLayout" name="gridLayout" columnstretch="0,1">
      <item row="4" column="1">
       <widget class="QLabel" name="freeReceiveBuffer">
        <property name="text">
